--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.61.3",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.460.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.0.1",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.15",
     "zod": "^3.23.8"
   },
